# legalmind-modular-rag

./: .env.example  .gitignore  README.md  app.py  case-study.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
golden_dataset/: eval_cli.py  rag_eval_questions.json
sample_docs/: brief_motion_summary_judgment_2022.txt  case_file_henderson_v_blackwood_2022.txt  contract_acme_services_2023.txt  employment_agreement_cto_2023.txt  generate_samples.py  nda_globex_stellartech_2023.txt
src/: config.py  models.py
src/agents/: adversarial_lawyer.py  compliance_auditor.py  shepardizer.py
src/api/: routes.py
src/cache/: semantic_cache.py
src/generation/: llm.py  prompts.py  response.py
src/ingestion/: chunker.py  enricher.py  parser.py  pipeline.py
src/retrieval/: base.py  hybrid_retriever.py  reranker.py  sparse_retriever.py  vector_retriever.py
tests/: conftest.py
tests/eval/: test_context_precision.py  test_faithfulness.py  test_rag_benchmark.py  test_relevance.py
tests/unit/: test_cache.py  test_chunker.py  test_enricher.py  test_reranker.py
